--- a/_includes/header/introduction.html
+++ b/_includes/header/introduction.html
@@ -4,16 +4,16 @@
             <div class="row">
                 <div class="span6 intro">
                     <div class="leader">
-                        <a href="//uberobert.com" id="logo"></a>
-                        <h1><a href="/">Uber<br />Robert</a></h1>    
-                        <p>Technology blog about stuff I love!</p>
+                        <a href="//skyblue168.github.io/" id="logo"></a>
+                        <h1><a href="/">Brent<br />Lin</a></h1>    
+                        <p>Free live blog about I love!</p>
                     </div>
                 </div>
                 <div class="span5 stay-updated">
                     <div id="twitter-status" class="well">
                         <i class=icon-twitter></i>
                         <div id="tweet"></div>
-                        <a href="//twitter.com/Robert_Birnie">Follow @Robert_Birnie &raquo;</a>
+                        <a href="//twitter.com/Brent168">Follow @Brent168 &raquo;</a>
                     </div>                    
                 </div>                        
             </div>{% include header/newer-older.html %}
