--- a/_includes/sidebar/about.html
+++ b/_includes/sidebar/about.html
@@ -5,10 +5,10 @@
             What is Going on Here?
         </h2>
         <p>
-            <strong>Uberobert is a personal blog/site for me! Robert Birnie.</strong>
+            <strong>This is a personal blog/site for me!</strong>
         </p>
         <p> 
-            I'm an IT professional, Systems Engineer and budding entrepreneur.
+            I'm an IT professional, Systems Engineer.
         </p>
         <a href="/about.html">See more.</a>
 </div>
