--- a/_includes/themes/the-program/default.html
+++ b/_includes/themes/the-program/default.html
@@ -36,7 +36,7 @@
 						    </div>
 						    <input type="hidden" name="ie" value="UTF-8" />
 						    <input type="hidden" name="oe" value="UTF-8" />
-						    <input type="hidden" name="hl" value="zh-CN" />
+						    <input type="hidden" name="hl" value="zh-TW" />
 						    <input type="hidden" name="domains" value="http://skyblue168.github.io" />
 						    <input type="hidden" name="sitesearch" value="http://skyblue168.github.io" />
 						</li>
@@ -62,7 +62,7 @@
 						<li><a href="/atom.xml">RSS</a></li>
 					</ul>
 				</div><!-- misc -->
-				<p class="licence">&copy; {{ site.author.name }} 2012 with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
+				<p class="licence">&copy; {{ site.author.name }} 2013 with help from <a href="http://jekyllbootstrap.com" target="_blank" title="The Definitive Jekyll Blogging Framework">Jekyll Bootstrap</a>
 				</p>
 			</div><!-- unit-foot-inner -->
 		</div><!-- unit-foot -->
