--- a/_includes/themes/twitter/default.html
+++ b/_includes/themes/twitter/default.html
@@ -47,7 +47,7 @@
 			  </div>
 			  <input type="hidden" name="ie" value="UTF-8" />
 			  <input type="hidden" name="oe" value="UTF-8" />
-			  <input type="hidden" name="hl" value="zh-CN" />
+			  <input type="hidden" name="hl" value="zh-TW" />
 			  <input type="hidden" name="domains" value="http://skyblue168.github.io" />
 			  <input type="hidden" name="sitesearch" value="http://skyblue168.github.io" />
 		  </ul>
